[package]
name = "pallet-plasm-staking"
version = "1.4.0"
authors = ["Stake Technologies <hyungsuk@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.plasmnet.io/"
repository = "https://github.com/staketechnologies/Plasm/"
description = "FRAME pallet to manage rewards for plasm network"

[dependencies]
serde = { version = "1.0.106", optional = true }
static_assertions = "1.1.0"
codec = { package = "parity-scale-codec", version = "1.3.5", features = ["derive"], default-features = false }
num-traits = { version = "0.2", default-features = false }
sp-runtime = { version = "2.0.0", default_features = false }
sp-arithmetic = { version = "2.0.0", default_features = false }
sp-io = { version = "2.0.0", default_features = false }
sp-std = { version = "2.0.0", default_features = false }
sp-npos-elections = { version = "2.0.0", default_features = false }
frame-support = { version = "2.0.0", default_features = false }
pallet-session = { version = "2.0.0", default-features = false }
pallet-authorship = { version = "2.0.0", default_features = false }
frame-system = { version = "2.0.0", default_features = false }
pallet-staking = { version = "2.0.0", default_features = false }
pallet-staking-reward-curve = { version = "2.0.1", default_features = false }
sp-staking = { version = "2.0.0", default_features = false }
rand_chacha = {version = "0.2", default_features = false }
sp-application-crypto = { version="2.0.0", default_features = false }


[dev-dependencies]
hex-literal = "0.2.1"
sp-core = "2.0.0"
pallet-balances = "2.0.0"
pallet-timestamp = "2.0.0"
pallet-randomness-collective-flip = "2.0.0"
substrate-test-utils = "2.0.1"

[features]
default = ["std"]
std = [
    "serde", 
    "codec/std",
    "num-traits/std", 
    "sp-std/std", 
    "sp-npos-elections/std", 
    "sp-io/std", 
    "frame-support/std", 
    "sp-runtime/std", 
    "sp-staking/std", 
    "pallet-session/std", 
    "pallet-staking/std",
    "frame-system/std", 
    "pallet-authorship/std", 
    "sp-application-crypto/std",
    "frame-support/std",
]
